[package]
name = "ssg"
version = "0.0.0"
authors = ["astral4"]
edition = "2021"
description = "Static site generator for my personal website"
readme = "README.md"
repository = "https://github.com/astral4/site"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.93"
pulldown-cmark = { version = "0.12.2", default-features = false }
rquickjs = { version = "0.6.2", features = ["parallel", "rust-alloc"] }
syntect = { version = "5.2.0", default-features = false, features = ["default-syntaxes", "default-themes", "html", "regex-onig"] }
tap = "1.0.1"

[lints.rust]
async_fn_in_trait = "allow"
ffi_unwind_calls = "warn"
let_underscore_drop = "deny"
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
missing_abi = "deny"
missing_copy_implementations = "warn"
non_ascii_idents = "forbid"
non_local_definitions = "warn"
nonstandard_style = { level = "deny", priority = 1 }
redundant_lifetimes = "deny"
rust_2018_idioms = { level = "deny", priority = 1 }
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unit_bindings = "deny"
unreachable_pub = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"

[lints.clippy]
module_name_repetitions = { level = "allow", priority = 1 }
new_without_default = { level = "allow", priority = 1 }
pedantic = "warn"

[profile.release]
codegen-units = 1
lto = true
strip = true
