[workspace]
members = ["ssg", "katex-dl"]
resolver = "2"

[workspace.package]
authors = ["Kyle Chen"]
edition = "2021"
repository = "https://github.com/astral4/site"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.93"

[workspace.lints.rust]
async_fn_in_trait = "allow"
ffi_unwind_calls = "warn"
let_underscore_drop = "deny"
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
missing_abi = "deny"
missing_copy_implementations = "warn"
non_ascii_idents = "forbid"
non_local_definitions = "warn"
nonstandard_style = { level = "deny", priority = 1 }
redundant_lifetimes = "deny"
rust_2018_idioms = { level = "deny", priority = 1 }
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unit_bindings = "deny"
unreachable_pub = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"

[workspace.lints.clippy]
module_name_repetitions = { level = "allow", priority = 1 }
new_without_default = { level = "allow", priority = 1 }
pedantic = "warn"

[workspace.profile.release]
codegen-units = 1
lto = true
strip = true
