[package]
name = "katex-dl"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
description = "KaTeX distribution downloader for vendoring purposes"
readme = "README.md"
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
regex = "1.11.1"
reqwest = { version = "0.12.10", default-features = false, features = ["http2", "rustls-tls"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
