[package]
name = "katex-dl"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
description = "KaTeX distribution downloader for vendoring purposes"
readme = "README.md"
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
aho-corasick = "1.1.3"
anyhow.workspace = true
common = { path = "../common/" }
regex = "1.11.1"
reqwest = { version = "0.12.10", default-features = false, features = ["http2", "rustls-tls"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
