[package]
name = "katex-dl"
version = "1.0.4"
authors.workspace = true
edition.workspace = true
description = "KaTeX distribution downloader for vendoring purposes"
readme = "README.md"
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
aho-corasick.workspace = true
anyhow.workspace = true
camino.workspace = true
common = { path = "../common/" }
regex = "1.11.3"
reqwest = { version = "0.12.23", default-features = false, features = ["http2", "rustls-tls"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
